# JohnnyDeppendency

./: .JohnnyDeppendencyrc  .gitignore  CMakeLists.txt  README.md
include/: Multiperceptron.h  feature_ex.h  oracle.h  parser_config.h  perceptron.h  token.h  utils.h
resource/: wsj_train.first-1k.conll06
src/: Multiperceptron.cpp  feature_ex.cpp  main.cpp  oracle.cpp  parser_config.cpp  perceptron.cpp  token.cpp  utils.cpp
